--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </h1>
         <div class="subheading mb-5">Ph.D. candidate @ CSE of Washington University in St. Louis<br>
         </div>
-        <p class="lead mb-5">I am on job market for a faculty position!</p>
+        <p class="lead mb-5">I am on job market for a faculty and research position!</p>
 		
 		<p class="lead mb-5">I am fifth-year Ph.D. student advised by <a href="https://www.cse.wustl.edu/~lu/">Prof. Chenyang Lu </a> at the <a href="http://wsn.cse.wustl.edu/index.php/Cyber-Physical_Systems_Laboratory">Cyber-Physical Systems Laboratory (CPSL)</a> at Washington University in St. Louis. We perform cutting-edge research on Internet of Things, and cyber-physical systems that cross-cut computing and other disciplines.</p>
 		
