--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
         <p class="lead mb-5">I am on job market for a faculty and research position!</p>
 		
-		<p class="lead mb-5">I am fifth-year Ph.D. student advised by <a href="https://www.cse.wustl.edu/~lu/">Prof. Chenyang Lu </a> at the <a href="http://wsn.cse.wustl.edu/index.php/Cyber-Physical_Systems_Laboratory">Cyber-Physical Systems Laboratory (CPSL)</a> at Washington University in St. Louis. We perform cutting-edge research on Internet of Things, and cyber-physical systems that cross-cut computing and other disciplines.</p>
+		<p class="lead mb-5">I am fifth-year Ph.D. student advised by <a href="https://www.cse.wustl.edu/~lu/">Prof. Chenyang Lu </a> at the <a href="http://wsn.cse.wustl.edu/index.php/Cyber-Physical_Systems_Laboratory">Cyber-Physical Systems Laboratory (CPSL)</a> at Washington University in St. Louis. We perform cutting-edge research on Industrial Internet of Things, and cyber-physical systems that cross-cut computing, communication and dynamic control system.</p>
 		
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/yehan-ma-889688a9/">
