--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <a class="nav-link js-scroll-trigger" href="#publications">Publications</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#curriculumvitae">CurriculumVitae</a>
+          <a class="nav-link js-scroll-trigger" href="#curriculumvitae">CV</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -229,7 +229,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="curriculumvitae">
       <div class="w-100">
         <h2 class="mb-5">Curriculum Vitae</h2>
-        <li><a href="CV_Yehan_Ma.pdf">Yehan Ma's Curriculum Vitae</a></li>
+        <li><a href="CV_Yehan_Ma.pdf">Yehan Ma's CV</a></li>
       </div>
     </section>
 
