--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
       <div class="w-100">
         <h2 class="mb-5">Contact</h2>
         <p>If you are interested at me or have some comments about me, please feel free to contact me.</p>
-        <p> <strong> Address: </strong> <br> Department of Computer Science and Engineering <br> Washington University in St. Louis <br> Harold D. Jolley Hall, Room 219A,<br> One Brookings Drive,<br> St. Louis, MO 63130 </p>
+        <p> <strong> Address: </strong> <br> Department of Computer Science and Engineering <br> Washington University in St. Louis <br> Harold D. Jolley Hall, Room 219A, Yehan Ma,<br> One Brookings Drive,<br> St. Louis, MO 63130 </p>
         <p> <strong> Email: </strong> <br> yehan.ma at wustl dot edu <br> mayehan217 at gmail dot com </p>
       </div>
     </section>
