--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h1 class="mb-0">Yehan
           <span class="text-primary">Ma</span>		  
         </h1>
-        <div class="subheading mb-5">Ph.D. candidate @ CSE of Washington University in St. Louis<br>
+        <div class="subheading mb-5">Ph.D. @ CSE of Washington University in St. Louis<br>
         </div>
         <p class="lead mb-5">I am on job market for a faculty and research position!</p>
 		
@@ -102,11 +102,11 @@
           <div class="resume-content">
             <h3 class="mb-0">Washington University in St. Louis</h3>
             <div class="subheading">Computer Science</div>
-            <div>Ph.D. candidate advised by Prof. Chenyang Lu</div>
+            <div>Ph.D. advised by Prof. Chenyang Lu</div>
             <p>GPA: 3.95/4</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2015 - August 2020</span>
+            <span class="text-primary">August 2015 - September 2020</span>
           </div>
         </div>
 
