--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <p></p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2015 - Present</span>
+            <span class="text-primary">August 2015 - September 2020</span>
           </div>
         </div>
 
