--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
         <h1 class="mb-0">Yehan
           <span class="text-primary">Ma</span>		  
         </h1>
+	<div class="subheading mb-5">Assistant Professer @ John Center of Shanghai Jiao Tong University<br>
+        </div>
         <div class="subheading mb-5">Ph.D. @ CSE of Washington University in St. Louis<br>
         </div>
         
