--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         </h1>
 	<div class="subheading mb-5">Assistant Professer @ John Center of Shanghai Jiao Tong University<br>
         </div>
+	      <p class="lead mb-5"> I am looking for self-motivated undergraduate and graduate students to conduct exciting research on novel IIoT systems! Prospective students are welcome to drop me an email with your CV.</p>
         <div class="subheading mb-5">Ph.D. @ CSE of Washington University in St. Louis<br>
         </div>
         
