--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">马叶涵 Yehan Ma</span>
+      <span class="d-block d-lg-none">Yehan Ma</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
       </span>
@@ -67,7 +67,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
         <h1 class="mb-0">Yehan
-          <span class="text-primary">Ma</span>		  
+          <span class="text-primary">Ma 马叶涵</span>		  
         </h1>
 	<div class="subheading mb-5">Assistant Professer @ John Center of Shanghai Jiao Tong University<br>
         </div>
