--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 
 <head>
 
+  <title>马叶涵 Yehan Ma Personal Website </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="马叶涵个人主页">
+  <meta name="author" content="马叶涵">
+  <meta name="keywords" content="马叶涵, Yehan Ma, Ma Yehan, 上海交通大学">
 
-  <title>Yehan Ma Personal Website</title>
+
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -66,13 +68,13 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Yehan
-          <span class="text-primary">Ma 马叶涵</span>		  
+        <h1 class="mb-0"><font size="15">Yehan Ma</font>
+          <span class="mb-0"><font size="10">马叶涵</font></span>		  
         </h1>
 	<div class="subheading mb-5">Assistant Professer @ John Center of Shanghai Jiao Tong University<br>
         </div>
 	      <p class="lead mb-5"> I am looking for self-motivated undergraduate and graduate students to conduct exciting research on novel IIoT systems! Prospective students are welcome to drop me an email with your CV.</p>
-        <div class="subheading mb-5">Ph.D. @ CSE of Washington University in St. Louis<br>
+        <div class="subheading mb-5">Ph.D. @ Computer Science and Engineering Department of Washington University in St. Louis<br>
         </div>
         
 		<p class="lead mb-5">I earned my Ph.D. under the advice of <a href="https://www.cse.wustl.edu/~lu/">Prof. Chenyang Lu </a> at the <a href="http://wsn.cse.wustl.edu/index.php/Cyber-Physical_Systems_Laboratory">Cyber-Physical Systems Laboratory (CPSL)</a> at Washington University in St. Louis. We perform cutting-edge research on Industrial Internet of Things, and cyber-physical systems that cross-cut computing, communication and dynamic control system.</p>
@@ -233,7 +235,24 @@
       <div class="w-100">
         <h2 class="mb-3">Publications</h2>
         <li><a href="https://scholar.google.com/citations?user=0VhWiMsAAAAJ&hl=en">Google Scholar</a></li>
-		<li><a href="Publication_List_Yehan_Ma.pdf">My Publication List</a></li>
+		
+    <div class="subheading">Publication List</div>
+    <div class="subheading">Papers</div>
+    <li>Y. Ma, C. Lu, B. Sinopoli and S. Zeng, Exploring Edge Computing for Multi-Tier Industrial Control, IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD), Special Issue on ESWEEK 2020 - Proceedings of ACM International Conference on Embedded Software (EMSOFT), 39(11): 3506-3518, November 2020.</li>
+    <li>Y. Ma, C. Lu and Y. Wang, Efficient Holistic Control: Self-Awareness across Controllers and Wireless Networks, ACM Transactions on Cyber-Physical Systems, Special Issue on Self-Awareness in Resource Constrained Cyber-Physical Systems, 4(4), Article 41: 1-27, June 2020.</li>
+    <li>Y. Ma, J. Guo, Y. Wang, A. Chakrabarty, H. Ahn, P. Orlik and C. Lu, Optimal Dynamic Scheduling of Wireless Networked Control Systems, ACM/IEEE International Conference on Cyber-Physical Systems (ICCPS'19), April 2019.</li>
+    <li>Y. Ma, Y. Wang, S. Di Cairano, T. Koike-Akino, J. Guo, P. Orlik and C. Lu, A Smart Actuation Architecture for Wireless Networked Control Systems, IEEE Conference on Decision and Control (CDC'18), December 2018.</li>
+    <li>Y. Ma and C. Lu, Efficient Holistic Control over Industrial Wireless Sensor-Actuator Networks, IEEE International Conference on Industrial Internet (ICII'18), October 2018.</li>
+    <li>Y. Ma, D. Gunatilaka, B. Li, H. Gonzalez and C. Lu, Holistic Cyber-Physical Management for Dependable Wireless Control Systems, ACM Transactions on Cyber-Physical Systems, Special Issue on Dependability in Cyber Physical Systems and Applications, 3(1), Article No. 3, August 2018.</li>
+    <li>J. Li, H. Li, Y. Ma, Y. Wang, A.A. Abokifa, C. Lu and P. Biswas, Spatiotemporal Distribution of Indoor Particulate Matter Concentration with a Low-Cost Sensor Network, Building and Environment, volume 127, pages 138–147, January 2018.</li>
+    <li>B. Li*, Y. Ma*, T. Westenbroek, C. Wu, H. Gonzalez and C. Lu, Wireless Routing and Control: a Cyber-Physical Case Study, ACM/IEEE International Conference on Cyber-Physical Systems (ICCPS'16), April 2016.</li>
+    <li>Y. Ma, M. Ling, C. Wang, and Q. Zeng, Design and Implementation of Real-time Simulation System of OTV based on xPC Target and SIT, World Congress on Intelligent Control and Automation (WCICA'14), 2014.</li>
+    <li>A. Zou, H. Zhao, Y. Ma, and D. Li, Analysis Calculation and Testing of Rotary Inductosyn Angle Measuring Errors, Chinese Control Conference (CCC'14), 2014.</li>
+
+     <div class="subheading">Patents</div>
+     <li>J. Guo, Y. Ma, Y. Wang, A. Chakrabarty, H. Ahn, P. Orlik, Network Adapted Control System, In United States Patent Application US20200218239A1, 2020.</li>
+     <li>Y. Wang, Y. Ma, P. Orlik, T. Koike-akino, J. Guo, Network Adapted Control System, In United States Patent US10809701B2, 2020.</li>
+
 	  </div>
 	  
     </section>
