--- a/index.html
+++ b/index.html
@@ -80,10 +80,8 @@
 	<div class="subheading mb-5">Associate Professer @ John Center of Shanghai Jiao Tong University<br>
         </div>
 	      <p class="lead mb-5"> I am looking for self-motivated undergraduate and graduate students to conduct exciting research on novel IIoT systems! Prospective students are welcome to drop me an email with your CV.</p>
-        <div class="subheading mb-5">Ph.D. @ Computer Science and Engineering Department of Washington University in St. Louis<br>
-        </div>
         
-		<p class="lead mb-5">I earned my Ph.D. under the advice of <a href="https://www.cse.wustl.edu/~lu/">Prof. Chenyang Lu </a> at the <a href="http://wsn.cse.wustl.edu/index.php/Cyber-Physical_Systems_Laboratory">Cyber-Physical Systems Laboratory (CPSL)</a> at Washington University in St. Louis. We perform cutting-edge research on Industrial Internet of Things, and cyber-physical systems that cross-cut computing, communication and dynamic control system.</p>
+		<p class="lead mb-5">We perform cutting-edge research on Industrial Internet of Things, and cyber-physical systems that cross-cut computing, communication and dynamic control system.</p>
 		
 <!--         <div class="social-icons">
           <a href="https://www.linkedin.com/in/yehan-ma-889688a9/">
