--- a/index.html
+++ b/index.html
@@ -274,6 +274,9 @@
             Cyber-Physical Systems</li>
           <li>
             <i class="fa-li fa fa-check"></i>
+            Real-Time Systems</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
             Embedded AI</li>
           <li>
             <i class="fa-li fa fa-check"></i>
@@ -295,8 +298,10 @@
     <div class="subheading">Publication List</div>
     <div class="subheading">Papers</div>
     <div class="text-primary">2024</div>
-    <li>Y. Ma, Y. Wang, S. D. Cairano, T. Koike-Akino, J. Guo, P. Orlik, X. Guan, C. Lu, Smart Actuation for End-Edge Industrial Control Systems, IEEE Transactions on Automation Science and Engineering, 21(1):269-283, Jan 2024</li>
-    <li>R. F, J. Chen, Y. Lin, A. Zou, C. Chen, X. Guan, Y. Ma, Smart Sensing and Communication Co-Design for IIoT-Based Control Systems, IEEE Internet of Things Journal, 11(3): 3994 - 4014, Feb 2024.</li>
+    <li>Y. Ma, R. Fu, A. Zou, J. Li, C. Chen, C. Lu, X. Guan, Performance Optimization and Stability Guarantees for Multi-tier Real-Time Control Systems, IEEE Real-Time Systems Symposium (RTSS), 2024.</li>
+    <li>J. Chen, A. Zou, Y. Xu, Y. Ma, SCENIC: Capability and Scheduling Co-Design for Intelligent Controller on Heterogeneous Platforms, IEEE Real-Time Systems Symposium (RTSS), 2024.</li>
+    <li>R. Fu, L. Guo, A. Zou, C. Chen, X. Guan, Y. Ma, Comprehensive Optimal Network Scheduling Strategies for Wireless Control Systems, ACM Transactions on Cyber-Physical Systems (TCPS), 2024.</li>
+    <li>R. Fu, J. Chen, Y. Lin, A. Zou, C. Chen, X. Guan, Y. Ma, Smart Sensing and Communication Co-Design for IIoT-Based Control Systems, IEEE Internet of Things Journal, 11(3): 3994 - 4014, Feb 2024.</li>
     <li>X. Wen C. Chen, C. Ren, Y. Ma, M. Li, L. Lyu, X. Guan, Age-of-Task-Aware Co-Design of Sampling, Scheduling, and Control for Industrial IoT Systems, IEEE Internet of Things Journal, 11(3): 4227-4242, Feb 2024.</li>
     <li>X. Wang, J. Zhang, C. Chen, J. He, Y. Ma and X. Guan, Trust-AoI-Aware Codesign of Scheduling and Control for Edge-Enabled IIoT Systems, IEEE Transactions on Industrial Informatics, 20(2):2833-2842, Feb. 2024.</li>
     <div class="text-primary">2023</div>
@@ -309,6 +314,7 @@
     <li>Z. Ji, C. Chen, S. Zhu, Y. Ma and X. Guan, Intelligent Edge Sensing and Control Co-Design for Industrial Cyber-Physical System, IEEE Transactions on Signal and Information Processing over Networks, 9:175-189, 2023.</li>
     <li>C. Ren, C. Chen, X. Wen, Y. Ma, S. Zhu and X. Guan, Joint Design of Communication and Computing for Digital-Twin-Enabled Aircraft Final Assembly, IEEE Internet of Things Journal, 10(18):15872-15886, Sep 2023. </li>
     <div class="text-primary">2022</div>
+    <li>Y. Ma, Y. Wang, S. D. Cairano, T. Koike-Akino, J. Guo, P. Orlik, X. Guan, C. Lu, Smart Actuation for End-Edge Industrial Control Systems, IEEE Transactions on Automation Science and Engineering, 21(1):269-283, Jan 2022</li>
     <li>Y. Ma, J. Guo, Y. Wang, A. Chakrabarty, H. Ahn, P. Orlik, X. Guan, C. Lu, Optimal Dynamic Transmission Scheduling for Wireless Networked Control Systems, IEEE Transactions on Control Systems Technology, 30(6): 2360-2376, Nov 2022,</li>
     <li>Y. Xu, T. He, R. Sun, Y. Ma, Y. Jin, and A. Zou, SHAPE: Scheduling of Fixed-Priority Tasks on Heterogeneous Architectures with Multiple CPUs and Many PEs, IEEE/ACM International Conference on Computer-Aided Design (ICCAD), 2022.</li>
     <li>L. Ren, Z. Jia, T. Wang, Y. Ma and L. Wang, LM-CNN: A Cloud-Edge Collaborative Method for Adaptive Fault Diagnosis With Label Sampling Space Enlarging, IEEE Transactions on Industrial Informatics, 18(12):9057-9067, Dec 2022.</li>
@@ -349,14 +355,22 @@
         <span style="float:right;">2024</span></li>
         <li>IEEE ISORC（Technical Program Chair)
         <span style="float:right;">2023</span></li>
+        <li>ACM/IEEE ICCPS（Publicity Chair)
+        <span style="float:right;">2024</span></li>
         <li>IEEE SIES（Publicity Chair)
         <span style="float:right;">2024</span></li>
         <li>IEEE SECON（Session Chair)
         <span style="float:right;">2022</span></li>
+        <li>IEEE RTSS（Technical Program Committee)
+        <span style="float:right;">2021,2022,2023</span></li>
+        <li>IEEE RTAS（Technical Program Committee)
+        <span style="float:right;">2024</span></li>
+        <li>IEEE DATE（Technical Program Committee)
+        <span style="float:right;">2023,2024</span></li>
         <li>EWSN（Technical Program Committee)
         <span style="float:right;">2024</span></li>
         <li>ECRTS（Technical Program Committee)
-        <span style="float:right;">2024</span></li>
+        <span style="float:right;">2023,2024</span></li>
         <li>IEEE RTCSA（Technical Program Committee)
         <span style="float:right;">2024</span></li>
         <li>RTNS（Technical Program Committee)
@@ -409,6 +423,10 @@
         <span style="float:right;">2023</span></li>
         <li>Chenhui Xue（Master)
         <span style="float:right;">2023</span></li>
+        <li>Haolan Zhang（PH.D.)
+        <span style="float:right;">2024</span></li>
+        <li>Qi Fan（Master)
+        <span style="float:right;">2024</span></li>
 
           <p></p><p></p>
           <p></p>
@@ -416,15 +434,12 @@
 
 
 <div class="text-primary">Undergraduate Students</div>
-<li>Haolan Zhang (Undergraduate Project)
-        <span style="float:right;">2023</span></li>
-        <li>Xuan Feng（Undergraduate Project)
-        <span style="float:right;">2023</span></li>
-        <li>Jihang Wang（Undergraduate Project)
-        <span style="float:right;">2023</span></li>
-        <li>Ye Rao（Undergraduate Project)
-        <span style="float:right;">2023</span></li>
-
+        <li>Shuo Wu
+        <span style="float:right;">2024</span></li>
+        <li>Haoyang He
+        <span style="float:right;">2024</span></li>
+        <li>Zeyi Wang
+        <span style="float:right;">2024</span></li>
           <p></p><p></p>
           <p></p>
           <p></p>
@@ -432,7 +447,14 @@
 
     <h3 class="mb-0">Graduated</h3>
     <div class="text-primary">Undergraduate Students (Graduation Project)</div>
-
+        <li>Haolan Zhang（Ph.D, Shanghai Jiao Tong University)
+        <span style="float:right;">2023</span></li>
+        <li>Xuan Feng（Master, Cornell University)
+        <span style="float:right;">2023</span></li>
+        <li>Jihang Wang（Master, Shanghai Jiao Tong University)
+        <span style="float:right;">2023</span></li>
+        <li>Ye Rao（Master, Shanghai Jiao Tong University)
+        <span style="float:right;">2023</span></li>
         <li>Jintao Chen（Ph.D, Shanghai Jiao Tong University)
         <span style="float:right;">2022</span></li>
         <li>Chenhui Xue（Master, Shanghai Jiao Tong University)
