--- a/index.html
+++ b/index.html
@@ -297,7 +297,11 @@
 		
     <div class="subheading">Publication List</div>
     <div class="subheading">Papers</div>
+    <div class="text-primary">2025</div>
+    <li>R. Fu, A. Zou, C. Chen, X. Guan, Y. Ma, Mesh Network Scheduling based on Cyber-Physical Sensitivity for Wireless Control Systems, IEEE Real-Time and Embedded Technology and Applications Symposium (RTAS), 2025.</li>
+    <li>J. Chen, Y. Xu, Y. Ni, A. Zou, Y. Ma, RICH: Heterogeneous Computing for Real-Time Intelligent Control Systems,  Design, Automation and Test in Europe Conference (DATE), 2025.</li>
     <div class="text-primary">2024</div>
+    <li>Y. Ma, Y. Wang, S. D. Cairano, T. Koike-Akino, J. Guo, P. Orlik, X. Guan, C. Lu, Smart Actuation for End-Edge Industrial Control Systems, IEEE Transactions on Automation Science and Engineering, 21(1):269-283, Jan 2024. <span style="color:red;font-weight: bold">(T-ASE 2024 Best Application Paper Award)</span> </li> 
     <li>Y. Ma, R. Fu, A. Zou, J. Li, C. Chen, C. Lu, X. Guan, Performance Optimization and Stability Guarantees for Multi-tier Real-Time Control Systems, IEEE Real-Time Systems Symposium (RTSS), 2024.</li>
     <li>J. Chen, A. Zou, Y. Xu, Y. Ma, SCENIC: Capability and Scheduling Co-Design for Intelligent Controller on Heterogeneous Platforms, IEEE Real-Time Systems Symposium (RTSS), 2024.</li>
     <li>R. Fu, L. Guo, A. Zou, C. Chen, X. Guan, Y. Ma, Comprehensive Optimal Network Scheduling Strategies for Wireless Control Systems, ACM Transactions on Cyber-Physical Systems (TCPS), 2024.</li>
@@ -314,7 +318,6 @@
     <li>Z. Ji, C. Chen, S. Zhu, Y. Ma and X. Guan, Intelligent Edge Sensing and Control Co-Design for Industrial Cyber-Physical System, IEEE Transactions on Signal and Information Processing over Networks, 9:175-189, 2023.</li>
     <li>C. Ren, C. Chen, X. Wen, Y. Ma, S. Zhu and X. Guan, Joint Design of Communication and Computing for Digital-Twin-Enabled Aircraft Final Assembly, IEEE Internet of Things Journal, 10(18):15872-15886, Sep 2023. </li>
     <div class="text-primary">2022</div>
-    <li>Y. Ma, Y. Wang, S. D. Cairano, T. Koike-Akino, J. Guo, P. Orlik, X. Guan, C. Lu, Smart Actuation for End-Edge Industrial Control Systems, IEEE Transactions on Automation Science and Engineering, 21(1):269-283, Jan 2022</li>
     <li>Y. Ma, J. Guo, Y. Wang, A. Chakrabarty, H. Ahn, P. Orlik, X. Guan, C. Lu, Optimal Dynamic Transmission Scheduling for Wireless Networked Control Systems, IEEE Transactions on Control Systems Technology, 30(6): 2360-2376, Nov 2022,</li>
     <li>Y. Xu, T. He, R. Sun, Y. Ma, Y. Jin, and A. Zou, SHAPE: Scheduling of Fixed-Priority Tasks on Heterogeneous Architectures with Multiple CPUs and Many PEs, IEEE/ACM International Conference on Computer-Aided Design (ICCAD), 2022.</li>
     <li>L. Ren, Z. Jia, T. Wang, Y. Ma and L. Wang, LM-CNN: A Cloud-Edge Collaborative Method for Adaptive Fault Diagnosis With Label Sampling Space Enlarging, IEEE Transactions on Industrial Informatics, 18(12):9057-9067, Dec 2022.</li>
@@ -351,7 +354,7 @@
         <h2 class="mb-5">Services</h2>
         <li>IEEE RTSS（Publicity Chair)
         <span style="float:right;">2022, 2023</span></li>
-        <li>IEEE RTSS（Registration Chair)
+        <li>IEEE RTSS（Registration Chair, Session Chair)
         <span style="float:right;">2024</span></li>
         <li>IEEE ISORC（Technical Program Chair)
         <span style="float:right;">2023</span></li>
@@ -361,28 +364,28 @@
         <span style="float:right;">2024</span></li>
         <li>IEEE SECON（Session Chair)
         <span style="float:right;">2022</span></li>
-        <li>IEEE RTSS（Technical Program Committee)
-        <span style="float:right;">2021,2022,2023</span></li>
-        <li>IEEE RTAS（Technical Program Committee)
-        <span style="float:right;">2024</span></li>
-        <li>IEEE DATE（Technical Program Committee)
+        <li>IEEE RTSS（Technical Program Committee (TPC) Member)
+        <span style="float:right;">2021,2022,2023,2025</span></li>
+        <li>IEEE RTAS（TPC Member)
+        <span style="float:right;">2025</span></li>
+        <li>IEEE DATE（TPC Member)
         <span style="float:right;">2023,2024</span></li>
-        <li>EWSN（Technical Program Committee)
+        <li>EWSN（TPC Member)
         <span style="float:right;">2024</span></li>
-        <li>ECRTS（Technical Program Committee)
+        <li>ECRTS（TPC Member)
         <span style="float:right;">2023,2024</span></li>
-        <li>IEEE RTCSA（Technical Program Committee)
-        <span style="float:right;">2024</span></li>
-        <li>RTNS（Technical Program Committee)
-        <span style="float:right;">2023,2024</span></li>
-        <li>IEEE SECON（Technical Program Committee)
-        <span style="float:right;">2021,2022,2023</span></li>
+        <li>IEEE RTCSA（TPC Member)
+        <span style="float:right;">2024,2025</span></li>
+        <li>RTNS（TPC Member)
+        <span style="float:right;">2023,2024,2025</span></li>
+        <li>IEEE SECON（TPC Member)
+        <span style="float:right;">2021,2022,2023,2024</span></li>
         <li>IEEE TC（Reviewer)
         <span style="float:right;">2022</span></li>
         <li>IEEE TCYN（Reviewer)
         <span style="float:right;">2023</span></li>
         <li>IEEE T-ASE（Reviewer)
-        <span style="float:right;">2024</span></li>
+        <span style="float:right;">2024,2025</span></li>
         <li>IEEE TMC（Reviewer)
         <span style="float:right;">2024</span></li>
         <li>IEEE TVT（Reviewer)
@@ -396,7 +399,7 @@
         <li>IEEE TAC（Reviewer)
         <span style="float:right;">2021</span></li>
         <li>IEEE TII（Reviewer)
-        <span style="float:right;">2019, 2021</span></li>
+        <span style="float:right;">2019, 2021, 2024</span></li>
         <li>IFAC（Reviewer)
         <span style="float:right;">2019</span></li>
         <li>IEEE RTAS（Reviewer)
