--- a/index.html
+++ b/index.html
@@ -298,10 +298,16 @@
     <div class="subheading">Publication List</div>
     <div class="subheading">Papers</div>
     <div class="text-primary">2025</div>
+    <li>R. Fu, Y. Ma, Stability-Guaranteed Scheduling for Mesh Networked Control Systems with Fine-Grained Timing, IEEE Real-Time Systems Symposium (RTSS), 2025. (Accepted)</li>
+    <li>S. Ye, J. Chen, Y. Ma, A. Zou, FALCON: FPGA Accelerated Real-Time Intelligent Controller for Autonomous Systems, IEEE Real-Time Systems Symposium (RTSS), 2025. (Accepted)</li>
     <li>R. Fu, A. Zou, C. Chen, X. Guan, Y. Ma, Mesh Network Scheduling based on Cyber-Physical Sensitivity for Wireless Control Systems, IEEE Real-Time and Embedded Technology and Applications Symposium (RTAS), 2025.</li>
     <li>J. Chen, Y. Xu, Y. Ni, A. Zou, Y. Ma, RICH: Heterogeneous Computing for Real-Time Intelligent Control Systems,  Design, Automation and Test in Europe Conference (DATE), 2025.</li>
+    <li>C. Xue, Y. Ma, Safe Edge Intelligent Control with Cross-loop Constraints and Stability Guarantees, IEEE Transactions on Automation Science and Engineering, 2025. (Accepted)</li>
+    <li>Y. Wu, Y. Ma, M. Xie, W. Zhang, Partitioned Scheduling and Analysis for a Typed DAG Task on Heterogeneous Multi-Cores, ACM Transactions on Architecture and Code Optimization 22.3: 1-24, 2025.</li>
+    <li>T. Jin, C. Chen, Z. Ji, Y. Ma, X. Guan, Topology Design for Edge Sensing and Control: A Dynamic Observability Guaranteed Method, IEEE Transactions on Cybernetics, 2025.</li>
+    <li>T. Jin, C. Chen, Y. Ma, X. Guan. Deep Reinforcement Learning Based Transmission Scheduling for Sensing Aware Control, IEEE Transactions on Automation Science and Engineering, 2025.</li>
     <div class="text-primary">2024</div>
-    <li>Y. Ma, Y. Wang, S. D. Cairano, T. Koike-Akino, J. Guo, P. Orlik, X. Guan, C. Lu, Smart Actuation for End-Edge Industrial Control Systems, IEEE Transactions on Automation Science and Engineering, 21(1):269-283, Jan 2024. <span style="color:red;font-weight: bold">(T-ASE 2024 Best Application Paper Award)</span> </li> 
+    <li>Y. Ma, Y. Wang, S. D. Cairano, T. Koike-Akino, J. Guo, P. Orlik, X. Guan, C. Lu, Smart Actuation for End-Edge Industrial Control Systems, IEEE Transactions on Automation Science and Engineering, 21(1):269-283, Jan 2024. <span style="color:red;font-weight: bold">(T-ASE 2024 Best New Application Paper Award)</span> </li> 
     <li>Y. Ma, R. Fu, A. Zou, J. Li, C. Chen, C. Lu, X. Guan, Performance Optimization and Stability Guarantees for Multi-tier Real-Time Control Systems, IEEE Real-Time Systems Symposium (RTSS), 2024.</li>
     <li>J. Chen, A. Zou, Y. Xu, Y. Ma, SCENIC: Capability and Scheduling Co-Design for Intelligent Controller on Heterogeneous Platforms, IEEE Real-Time Systems Symposium (RTSS), 2024.</li>
     <li>R. Fu, L. Guo, A. Zou, C. Chen, X. Guan, Y. Ma, Comprehensive Optimal Network Scheduling Strategies for Wireless Control Systems, ACM Transactions on Cyber-Physical Systems (TCPS), 2024.</li>
@@ -353,7 +359,7 @@
       <div class="w-100">
         <h2 class="mb-5">Services</h2>
         <li>IEEE RTSS（Publicity Chair)
-        <span style="float:right;">2022, 2023</span></li>
+        <span style="float:right;">2022, 2023, 2025</span></li>
         <li>IEEE RTSS（Registration Chair, Session Chair)
         <span style="float:right;">2024</span></li>
         <li>IEEE ISORC（Technical Program Chair)
@@ -399,7 +405,7 @@
         <li>IEEE TAC（Reviewer)
         <span style="float:right;">2021</span></li>
         <li>IEEE TII（Reviewer)
-        <span style="float:right;">2019, 2021, 2024</span></li>
+        <span style="float:right;">2019, 2021, 2024, 2025</span></li>
         <li>IFAC（Reviewer)
         <span style="float:right;">2019</span></li>
         <li>IEEE RTAS（Reviewer)
