--- a/index.html
+++ b/index.html
@@ -370,10 +370,10 @@
         <span style="float:right;">2024</span></li>
         <li>IEEE SECON（Session Chair)
         <span style="float:right;">2022</span></li>
-        <li>IEEE RTSS（Technical Program Committee (TPC) Member)
+        <li>IEEE RTSS（TPC Member)
         <span style="float:right;">2021,2022,2023,2025</span></li>
         <li>IEEE RTAS（TPC Member)
-        <span style="float:right;">2025</span></li>
+        <span style="float:right;">2025,2026</span></li>
         <li>IEEE DATE（TPC Member)
         <span style="float:right;">2023,2024</span></li>
         <li>EWSN（TPC Member)
@@ -430,12 +430,16 @@
         <span style="float:right;">2022</span></li>
         <li>Jintao Chen（PH.D.)
         <span style="float:right;">2023</span></li>
-        <li>Chenhui Xue（Master)
-        <span style="float:right;">2023</span></li>
         <li>Haolan Zhang（PH.D.)
         <span style="float:right;">2024</span></li>
+        <li>Zitong Zhao（PH.D.)
+        <span style="float:right;">2025</span></li>
+        <li>Chenhui Xue（Master)
+        <span style="float:right;">2023</span></li>
         <li>Qi Fan（Master)
         <span style="float:right;">2024</span></li>
+        <li>Yiming Zhang（Master)
+        <span style="float:right;">2025</span></li>
 
           <p></p><p></p>
           <p></p>
@@ -446,8 +450,6 @@
         <li>Shuo Wu
         <span style="float:right;">2024</span></li>
         <li>Haoyang He
-        <span style="float:right;">2024</span></li>
-        <li>Zeyi Wang
         <span style="float:right;">2024</span></li>
           <p></p><p></p>
           <p></p>
