--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
     <div class="subheading">Publication List</div>
     <div class="subheading">Papers</div>
     <div class="text-primary">2025</div>
+    <li>Q. Fan, A. Zou, Y. Ma. TimeBill: Time-Budgeted Inference for Large Language Models, AAAI, 2026. (Accepted)</li>
     <li>R. Fu, Y. Ma, Stability-Guaranteed Scheduling for Mesh Networked Control Systems with Fine-Grained Timing, IEEE Real-Time Systems Symposium (RTSS), 2025. (Accepted)</li>
     <li>S. Ye, J. Chen, Y. Ma, A. Zou, FALCON: FPGA Accelerated Real-Time Intelligent Controller for Autonomous Systems, IEEE Real-Time Systems Symposium (RTSS), 2025. (Accepted)</li>
     <li>R. Fu, A. Zou, C. Chen, X. Guan, Y. Ma, Mesh Network Scheduling based on Cyber-Physical Sensitivity for Wireless Control Systems, IEEE Real-Time and Embedded Technology and Applications Symposium (RTAS), 2025.</li>
@@ -360,8 +361,10 @@
         <h2 class="mb-5">Services</h2>
         <li>IEEE RTSS（Publicity Chair)
         <span style="float:right;">2022, 2023, 2025</span></li>
-        <li>IEEE RTSS（Registration Chair, Session Chair)
+        <li>IEEE RTSS（Registration Chair)
         <span style="float:right;">2024</span></li>
+                <li>IEEE RTSS（Session Chair)
+        <span style="float:right;">2024, 2025</span></li>
         <li>IEEE ISORC（Technical Program Chair)
         <span style="float:right;">2023</span></li>
         <li>ACM/IEEE ICCPS（Publicity Chair)
@@ -374,6 +377,8 @@
         <span style="float:right;">2021,2022,2023,2025</span></li>
         <li>IEEE RTAS（TPC Member)
         <span style="float:right;">2025,2026</span></li>
+        <li>IEEE DAC（TPC Member)
+        <span style="float:right;">2026</span></li>
         <li>IEEE DATE（TPC Member)
         <span style="float:right;">2023,2024</span></li>
         <li>EWSN（TPC Member)
@@ -410,6 +415,8 @@
         <span style="float:right;">2019</span></li>
         <li>IEEE RTAS（Reviewer)
         <span style="float:right;">2018</span></li>
+        <li>IEEE AAAI（Reviewer)
+        <span style="float:right;">2026</span></li>
         <li>ACM TCPS（Reviewer)
         <span style="float:right;">2017</span></li>
         <li>IEEE ESL（Reviewer)
